feat: add cs3114 jacoco coverage report